--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -6,7 +6,8 @@
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
         <TextView
             android:id="@+id/title_preference"
@@ -24,11 +25,11 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15dp">
+            android:padding="10dp">
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bebés"
+                android:text="Paternidad"
                 android:id="@+id/check_bebes"
                 android:checked="false"
                 android:buttonTint="#4cb6c4" />
@@ -60,7 +61,7 @@
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Adolescentes"
+                android:text="Bebés"
                 android:id="@+id/checkBox"
                 android:checked="false"
                 android:layout_above="@+id/check_aprendizaje"
@@ -96,7 +97,7 @@
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Divorcio"
+                android:text="Niños"
                 android:id="@+id/checkBox4"
                 android:checked="false"
                 android:layout_below="@+id/check_cognitivo"
@@ -130,6 +131,17 @@
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/check_niños"
+                android:checked="false"
+                android:layout_below="@+id/check_comportamiento"
+                android:layout_marginTop="5dp"
+                android:layout_alignLeft="@+id/check_cognitivo"
+                android:buttonTint="#4cb6c4"
+                android:text="Divorcio" />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Adopción"
                 android:id="@+id/check_adopcion"
                 android:checked="false"
@@ -154,10 +166,22 @@
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Escuela"
                 android:id="@+id/check_escuela"
                 android:checked="false"
                 android:layout_below="@+id/check_desarrollo"
+                android:layout_alignLeft="@+id/check_desarrollo"
+                android:layout_marginTop="5dp"
+                android:layout_alignStart="@+id/check_desarrollo"
+                android:buttonTint="#4cb6c4"
+                android:text="Adolescentes" />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enfermedades"
+                android:id="@+id/check_efermedades"
+                android:checked="false"
+                android:layout_below="@+id/check_escuela"
                 android:layout_alignLeft="@+id/check_desarrollo"
                 android:layout_marginTop="5dp"
                 android:layout_alignStart="@+id/check_desarrollo"
