--- a/app/src/main/res/layout/fragment_item_question.xml
+++ b/app/src/main/res/layout/fragment_item_question.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="7dp"
-    android:paddingLeft="3dp"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp">
+    android:paddingLeft="4dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="5dp"
+    android:paddingRight="8dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,6 +49,23 @@
                 android:layout_marginTop="3dp"
                 android:textColor="#999999"
                 android:textSize="12sp" />
+            <ImageButton
+                android:id="@+id/btn_like_question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="5dp"
+                android:visibility="invisible"
+                android:background="@mipmap/ico_like_light_grey_24"/>
+            <!-- ELIMINAR LUEGO, TEMPORAL para pruebas -->
+            <ImageButton
+                android:id="@+id/btn_suggest_post"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="5dp"
+                android:visibility="gone"
+                android:background="@drawable/ico_suggest"/>
         </LinearLayout>
 
     </LinearLayout>
