--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -12,26 +12,41 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:orientation="vertical">
-        <EditText
-            android:id="@+id/input_answer"
+        <!-- Question -->
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:ems="12"
-            android:hint="Escribe aquí tu respuesta.."/>
+            android:layout_gravity="top"
+            android:layout_height="150dp">
+            <EditText
+                android:id="@+id/input_answer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:maxLength="150"
+                android:ems="12"
+                android:gravity="top"
+                android:singleLine="true"
+                android:inputType="textMultiLine"
+                android:background="@drawable/field_write_question"
+                android:textCursorDrawable="@drawable/cursor_text"
+                android:hint="@string/txt_write_answer"
+                android:editable="true" />
+        </RelativeLayout>
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".20"
             android:id="@+id/btn_answering"
-            android:text="Enviar"
+            android:text="@string/btn_send"
             android:textColor="#FFFFFF"
-            android:layout_gravity="center_horizontal|right"
+            android:layout_gravity="bottom|right"
+            android:layout_alignParentBottom="true"
             android:background="@drawable/button_fill_primary"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="70dp"
-            android:layout_marginTop="50dp"
-            android:clickable="true"
-            android:onClick="answering" />
+            android:layout_marginTop="10dp"
+            android:clickable="true" />
+
         </LinearLayout>
 </LinearLayout>
