--- a/app/src/main/res/layout/fragment_item_post.xml
+++ b/app/src/main/res/layout/fragment_item_post.xml
@@ -11,62 +11,100 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="2dp">
-            <ImageView
-                android:onClick="profileOn"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/ic_user"
-                android:src="@drawable/ic_profile"
-                android:layout_marginLeft="2dp"
-                android:layout_marginTop="2dp"/>
-            <TextView
-                android:id="@+id/txt_puser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Pedro Xavier"
-                android:layout_marginLeft="3dp"
-                android:layout_marginTop="0dp"
-                android:textColor="#4d8eb4"
-                android:textSize="14sp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="right">
-            <TextView
-                android:id="@+id/txt_date_post"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="hace 2 dias"
-                android:layout_marginTop="3dp"
-                android:textColor="#999999"
-                android:layout_marginLeft="7dp"
-                android:textSize="12sp" />
-            <ImageButton
-                android:id="@+id/btn_like_post"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="5dp"
-                android:visibility="invisible"
-                android:background="@mipmap/ico_like_grey_24"/>
+                android:paddingBottom="5dp">
+                <ImageView
+                    android:onClick="profileOn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/ic_user"
+                    android:src="@drawable/ico_avatar_48"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="0dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/txt_puser"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="Pedro Xavier"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginTop="2dp"
+                        android:textColor="#4d8eb4"
+                        android:textSize="14sp" />
+                    <!-- Tags -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="2dp">
+                        <ImageView
+                            android:id="@+id/ic_tag"
+                            android:onClick="profileOn"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginRight="4dp"
+                            android:src="@drawable/ic_tag"
+                            android:layout_marginTop="3dp" />
+                        <TextView
+                            android:id="@+id/txt_ptags"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textSize="12sp"
+                            android:text="dd"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="110dp"
+                android:layout_height="match_parent"
+                android:gravity="right">
+
+                <!-- Fecha -->
+                <TextView
+                    android:id="@+id/txt_date_post"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="2 min"
+                    android:layout_marginTop="5dp"
+                    android:textColor="#999999"
+                    android:layout_marginRight="5dp"
+                    android:textSize="12sp" />
+
+                <!-- Me gusta -->
+                <ImageButton
+                    android:id="@+id/btn_like_post"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="5dp"
+                    android:visibility="invisible"
+                    android:background="@mipmap/ico_like_grey_24"/>
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
+    <!-- Post-->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="-8dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="-2dp"
         android:gravity="left" >
         <TextView
             android:id="@+id/txt_ptitle"
@@ -82,42 +120,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Lorem impusn doler at si mel.."
+            android:text="@string/prueba"
             android:singleLine="false"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
-            android:maxLines="5"
+            android:maxLines="2"
             android:textColor="#666666"
             android:textSize="14sp" />
 
-        <!-- Tags -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="2dp">
-            <ImageView
-                android:id="@+id/ic_tag"
-                android:onClick="profileOn"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginRight="4dp"
-                android:src="@drawable/ic_tag"
-                android:layout_marginTop="3dp" />
-            <TextView
-                android:id="@+id/txt_ptags"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textSize="12sp"
-                android:text="dd"/>
-        </LinearLayout>
+        <!-- Foto
+
+
+
+        Aqui poner foto -->
+
 
         <!-- Reporte -->
-
         <LinearLayout
             android:id="@+id/container_report_post"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="3dp"
             android:paddingBottom="2dp">
             <TextView
                 android:id="@+id/txt_plikes"
@@ -127,7 +150,7 @@
                 android:textAlignment="center"
                 android:textSize="11sp"
                 android:textColor="@color/mediumGrey"
-                android:text="ss"
+                android:text="10 Me Gusta"
                 />
             <TextView
                 android:id="@+id/txt_separator"
@@ -144,7 +167,7 @@
                 android:textAlignment="center"
                 android:textSize="11sp"
                 android:textColor="@color/mediumGrey"
-                android:text="ss"
+                android:text="10 Comentarios"
                 />
         </LinearLayout>
     </LinearLayout>
