--- a/app/src/main/res/layout/fragment_item_question_old.xml
+++ b/app/src/main/res/layout/fragment_item_question_old.xml
@@ -145,7 +145,7 @@
                 android:textAlignment="center"
                 android:textSize="11sp"
                 android:textColor="@color/mediumGrey"
-                android:text=""
+                android:text="dfs"
                 />
 
         </LinearLayout>
